# cpp-labs

./: CMakeLists.txt
Pract2/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp
Pract3/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp
Pract4/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  functions.cpp  functions.h
Pract5/: Snack.cpp  Snack.h  SnackSlot.cpp  SnackSlot.h  VendingMachine.cpp  VendingMachine.h  main.cpp
lesson1/: task2.cpp  task3.cpp
lesson12/: Task1.cpp  Task2.cpp
lesson13/: main.cpp
lesson13/Animal/: Animal.cpp  Animal.h
lesson13/Car/: Car.cpp  Car.h
lesson14/: Animal.cpp  Animal.h  Car.cpp  Car.h  main.cpp
lesson15/: Animal.cpp  Animal.h  Car.cpp  Car.h  main.cpp
lesson16/: Car.cpp  Car.h  Truck.cpp  Truck.h
lesson2/: main.cpp
lesson5/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp
lesson7/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
lesson8/: task5.cpp
