cmake_minimum_required(VERSION 3.28.3)
project(cpp_labs)

set(CMAKE_CXX_STANDARD 14)

add_executable(l51 lesson5/task1.cpp)
add_executable(l52 lesson5/task2.cpp)
add_executable(l53 lesson5/task3.cpp)
add_executable(l54 lesson5/task4.cpp)
add_executable(l55 lesson5/task5.cpp)
add_executable(l56 lesson5/task6.cpp)
